# AiEnhancedObservabilityForMicroservicesArtefact

./: .gitignore
Application/: OtelSetup.py  pyproject.toml
Application/AuthService/: types.py
Application/OpenTelemtry/: OtelSetup.py
Application/application/: main.py
Application/application/core/: config.py
Application/application/core/authentication/core/: dbUtils.py  security.py  securityUtils.py
Application/application/core/authentication/repositories/: userRepository.py
Architecture /PlantUMLDiagrams/: ScholarSparkConcreteArchitecture.txt
